Bug 292410 - Highlight from Ctrl+F expands to text written next to it
Summary: Highlight from Ctrl+F expands to text written next to it
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Chakra Linux
: NOR minor
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-25 20:36 UTC by Kubuntiac
Modified: 2015-01-23 00:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kubuntiac 2012-01-25 20:36:45 UTC
Version:           svn (using KDE 4.7.4) 
OS:                Linux

If I do ctrl+f and type a string I'm looking for, it's highlighted throughout the document. So far so good. The trouble is, when I type text to the right of the highlight, that the highlight expands to cover my newly written text. uh oh.

Reproducible: Always

Steps to Reproduce:
1. create a new document with the text "hello this is test text" in it.
2. Do ctrl+f and search for 'is' (no quotes)
3. When the word 'is' is highlighted, click to the right of the 's' in 'is' and type " awesome" (no quotes)

Actual Results:  
"is awesome" is highlighted.

Expected Results:  
Only the text in the find box ("is" in this example) is highlighted

OS: Linux (x86_64) release 3.1-CHAKRA
Compiler: gcc

Calligra v2.3.85-939-g53c87c1
Comment 1 Camilla Boemann 2015-01-23 00:45:09 UTC
Git commit e280129948f4a47e13257a2027d28bd2a260f8bf by C. Boemann.
Committed on 23/01/2015 at 00:39.
Pushed by boemann into branch 'calligra/2.9'.

Make sure the result of finding text can't be extenden when writing after the text

M  +10   -0    libs/main/KoFindText.cpp

http://commits.kde.org/calligra/e280129948f4a47e13257a2027d28bd2a260f8bf