Make sure the result of finding text can't be extenden when writing after the text

BUG:292410